test/should_fail/inh_attrib_008.grg
using inh_attrib_model_008;

rule r {
	pattern {
	}
	replace {
	}
}

